--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
         <i class="fas fa-moon"></i>
     </button>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
+
